--- a/ElectronicObserver/Properties/Data/BattleRes.zh-Hans.resx
+++ b/ElectronicObserver/Properties/Data/BattleRes.zh-Hans.resx
@@ -271,4 +271,7 @@
 	<data name="BattlePhaseNightSupportExpedition" xml:space="preserve">
     <value>夜間支援攻撃</value>
   </data>
+	<data name="SmokeScreen" xml:space="preserve">
+		<value>烟幕</value>
+	</data>
 </root>
