--- a/ElectronicObserverTypes/Properties/EquipmentIconType.zh-Hans.resx
+++ b/ElectronicObserverTypes/Properties/EquipmentIconType.zh-Hans.resx
@@ -117,52 +117,172 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	<data name="Title" xml:space="preserve">
-    <value>Kancolle Progress</value>
+	<data name="AADirector" xml:space="preserve">
+    <value>高射装置</value>
   </data>
-	<data name="ExportAsCsv" xml:space="preserve">
-    <value>Export as CSV</value>
+	<data name="AAGun" xml:space="preserve">
+    <value>对空机枪</value>
   </data>
-	<data name="Ships" xml:space="preserve">
-    <value>Ships</value>
+	<data name="AAShell" xml:space="preserve">
+    <value>对空强化弹</value>
   </data>
-	<data name="Event" xml:space="preserve">
-    <value>Event</value>
+	<data name="APShell" xml:space="preserve">
+    <value>对舰强化弹</value>
   </data>
-	<data name="ColorFilters" xml:space="preserve">
-    <value>Color Filters</value>
+	<data name="ArmyInfantry" xml:space="preserve">
+    <value>陆战部队</value>
   </data>
-	<data name="File" xml:space="preserve">
-    <value>_File</value>
+	<data name="ASPatrol" xml:space="preserve">
+    <value>对潜哨戒机</value>
   </data>
-	<data name="View" xml:space="preserve">
-    <value>_View</value>
+	<data name="Autogyro" xml:space="preserve">
+    <value>旋翼机</value>
   </data>
-	<data name="Fcf" xml:space="preserve">
-    <value>FCF</value>
+	<data name="AviationPersonnel" xml:space="preserve">
+    <value>航空要员</value>
   </data>
-	<data name="Daihatsu" xml:space="preserve">
-    <value>Daihatsu</value>
+	<data name="CarrierBasedBomber" xml:space="preserve">
+    <value>舰上爆击机</value>
   </data>
-	<data name="Tank" xml:space="preserve">
-    <value>Tank</value>
+	<data name="CarrierBasedFighter" xml:space="preserve">
+    <value>舰上战斗机</value>
   </data>
-	<data name="DaihatsuAndTank" xml:space="preserve">
-    <value>Daihatsu &amp; Tank</value>
+	<data name="CarrierBasedRecon" xml:space="preserve">
+    <value>舰上侦察机</value>
   </data>
-	<data name="NoSonarOpeningAsw" xml:space="preserve">
-    <value>Opening ASW</value>
+	<data name="CarrierBasedTorpedo" xml:space="preserve">
+    <value>舰上攻击机</value>
   </data>
-	<data name="SingleSonarOpeningAsw" xml:space="preserve">
-    <value>1 slot opening ASW</value>
+	<data name="CommandFacility" xml:space="preserve">
+    <value>司令部设施</value>
   </data>
-	<data name="Max" xml:space="preserve">
-    <value>Max</value>
+	<data name="DamageControl" xml:space="preserve">
+    <value>应急修理要员</value>
   </data>
-	<data name="Collection" xml:space="preserve">
-    <value>Collection</value>
+	<data name="DepthCharge" xml:space="preserve">
+    <value>爆雷</value>
   </data>
-	<data name="Missing" xml:space="preserve">
-    <value>Missing</value>
+	<data name="Engine" xml:space="preserve">
+    <value>机关部强化</value>
+  </data>
+	<data name="ExtraArmor" xml:space="preserve">
+    <value>追加装甲</value>
+  </data>
+	<data name="FlyingBoat" xml:space="preserve">
+    <value>大型飞行艇</value>
+  </data>
+	<data name="HeavyBomber" xml:space="preserve">
+    <value>大型陆上机</value>
+  </data>
+	<data name="HighAngleGun" xml:space="preserve">
+    <value>高角炮</value>
+  </data>
+	<data name="Interceptor" xml:space="preserve">
+    <value>局地战斗机</value>
+  </data>
+	<data name="JetBomberKeiun" xml:space="preserve">
+    <value>喷气式战斗爆击机(噴式景雲改)</value>
+  </data>
+	<data name="JetBomberKikka" xml:space="preserve">
+    <value>喷气式战斗爆击机(橘花改)</value>
+  </data>
+	<data name="LandAssaulter" xml:space="preserve">
+    <value>舰上袭击机</value>
+  </data>
+	<data name="LandBasedASPatrol" xml:space="preserve">
+    <value>陆上对潜哨戒机</value>
+  </data>
+	<data name="LandBasedAttacker" xml:space="preserve">
+    <value>陆上攻击机</value>
+  </data>
+	<data name="LandBasedFighter" xml:space="preserve">
+    <value>陆军战斗机</value>
+  </data>
+	<data name="LandingCraft" xml:space="preserve">
+    <value>上陆用舟艇</value>
+  </data>
+	<data name="Locked" xml:space="preserve">
+    <value>锁定</value>
+  </data>
+	<data name="MainGunLarge" xml:space="preserve">
+    <value>大口径主炮</value>
+  </data>
+	<data name="MainGunMedium" xml:space="preserve">
+    <value>中口径主炮</value>
+  </data>
+	<data name="MainGunSmall" xml:space="preserve">
+    <value>小口径主炮</value>
+  </data>
+	<data name="NightAttacker" xml:space="preserve">
+    <value>夜间攻击机</value>
+  </data>
+	<data name="NightFighter" xml:space="preserve">
+    <value>夜间战斗机</value>
+  </data>
+	<data name="NightSeaplane" xml:space="preserve">
+    <value>夜间水上机</value>
+  </data>
+	<data name="NightSeaplaneBomber" xml:space="preserve">
+    <value>夜间水上爆击机</value>
+  </data>
+	<data name="Nothing" xml:space="preserve">
+    <value>无</value>
+  </data>
+	<data name="Radar" xml:space="preserve">
+    <value>电探</value>
+  </data>
+	<data name="Ration" xml:space="preserve">
+    <value>战斗粮食</value>
+  </data>
+	<data name="RepairFacility" xml:space="preserve">
+    <value>舰艇修理设施</value>
+  </data>
+	<data name="Rocket" xml:space="preserve">
+    <value>对地装备</value>
+  </data>
+	<data name="Seaplane" xml:space="preserve">
+    <value>水上机</value>
+  </data>
+	<data name="SeaplaneFighter" xml:space="preserve">
+    <value>水上战斗机</value>
+  </data>
+	<data name="Searchlight" xml:space="preserve">
+    <value>探照灯</value>
+  </data>
+	<data name="SecondaryGun" xml:space="preserve">
+    <value>副炮</value>
+  </data>
+	<data name="SmokeGenerator" xml:space="preserve">
+    <value>舰载发烟装置</value>
+  </data>
+	<data name="Sonar" xml:space="preserve">
+    <value>声呐</value>
+  </data>
+	<data name="SpecialAmphibiousTank" xml:space="preserve">
+    <value>特型内火艇</value>
+  </data>
+	<data name="StarShell" xml:space="preserve">
+    <value>照明弹</value>
+  </data>
+	<data name="SubmarineEquipment" xml:space="preserve">
+    <value>潜水舰装备</value>
+  </data>
+	<data name="Supplies" xml:space="preserve">
+    <value>补给物资</value>
+  </data>
+	<data name="SurfaceShipPersonnel" xml:space="preserve">
+    <value>水上舰要员</value>
+  </data>
+	<data name="Torpedo" xml:space="preserve">
+    <value>鱼雷</value>
+  </data>
+	<data name="TransportContainer" xml:space="preserve">
+    <value>建议输送部材</value>
+  </data>
+	<data name="TransportMaterial" xml:space="preserve">
+    <value>輸送機材</value>
+  </data>
+	<data name="Unknown" xml:space="preserve">
+    <value>不明</value>
   </data>
 </root>
